2.4.1 -> 2.4.2:
	- completely rewrote queryformat code
	- added fsnames, fssizes virtual query tags
	- added rpmdbFindByHeader() and rpmdbFindByTag() public functions
	- added rpmfilename tag to rpmrc to define the filename format to
	  use for binary packages (note the rpmdir is prepended to it)
	- used pclose() instead of fclose() in -t code
	- updated man pages

2.4 -> 2.4.1:
	- take advantage of lchown() if it's available
	- fixed configure script to assume chown() doesn't follow symlinks
	  if lchown() isn't available and configure is not being run as root
	- more header file changes for AIX
	- added :shescape query format type for strings, which prints strings
	  which will survive a single level of shell expansion
	- fixed --setperms and --setugids to handle empty packages and 
	  packages with odd filenames
	- include <sys/time.h> before <sys/resource.h>
	- include "miscfn.h" first in every file which needs it
	- created noarch architecture which everything is compatible with
	- fixed group verification (Benedict Lofstedt)
	- don't backup config files on netsharedpaths
	- added info on --build{arch|os} to --help and usage messages

2.3.11 -> 2.4:
	- changed RPMNLSDIR directories to and @datadir@ to better
	  conform with autoconf
	- set RPM_INSTALL_PREFIX environment variable when running 
	  verify scripts
	- beginnings of SCO support (though I suspect it will take one
	  or two more iterations to get it right)
	- switched to CVS and updated some Makefile rules
	- look for gethostbyname() instead of gethostname() in -nsl
	  (this could break some things)
	- added check for strcasecmp() in -lucb on systems which don't
	  have strcasecmp() in libc
	- don't build -static on hpux10
	- don't try and NLS empty strings
	- changed index() call to strchr() in macro code
	- include <time.h> in build/spec.c for various platforms
	- added update-po rule to po/Makefile.in
	- updated de.po (thanks to Karl Eichwalder)
	- rpmFindByFile() removes trailing and duplicate /'s