@@ -6,6 +6,7 @@
 	  use for binary packages (note the rpmdir is prepended to it)
 	- used pclose() instead of fclose() in -t code
 	- updated man pages
+	- changed "struct rpmdb" to "struct rpmdb_s" for C++
 
 2.4 -> 2.4.1:
 	- take advantage of lchown() if it's available
